--- a/index.html
+++ b/index.html
@@ -5,24 +5,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file for styling -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"> <!-- Link to Font Awesome for icons -->
 </head>
 <body>
     <header>
-        <h1>Welcome to My Portfolio</h1>
+        <nav>
+            <div class="container">
+                <h1 class="logo">My Portfolio</h1>
+                <ul class="nav-links">
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
     </header>
 
-    <nav>
-        <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-
     <main>
+        <section id="hero">
+            <div class="container">
+                <h2>Welcome to My Portfolio</h2>
+                <p>Discover my projects and skills</p>
+                <a href="#projects" class="btn">View Projects</a>
+            </div>
+        </section>
+
         <section id="about">
-            <h2>About Me</h2>
-            <!-- Add your introduction and any other information you'd like to share -->
+            <div class="container">
+                <h2>About Me</h2>
+                <p>Insert a brief description of yourself and your skills.</p>
+            </div>
         </section>
 
         <section id="projects">
+            <div class="container">
+                <h2>Projects</h2>
+                <div class="project-grid">
+                    <div class="project-card">
+                        <img src="project1.jpg" alt="Project 1">
+                        <h3>Project 1</h3>
+                        <p>Description of Project 1.</p>
+                        <a href="project1.html" class="btn">View Project</a>
+                    </div>
+                    <div class="project-card">
+                        <img src="project2.jpg" alt="Project 2">
+                        <h3>Project 2</h3>
+                        <p>Description of Project 2.</p>
+                        <a href="project2.html" class="btn">View Project</a>
+                    </div>
+                    <!-- Add more project cards as needed -->
+                </div>
+            </div>
+        </section>
+
+        <section id="contact">
+            <div class="container">
+                <h2>Contact Me</h2>
+                <p>Feel free to get in touch.</p>
+                <ul class="social-links">
+                    <li><a href="mailto:youremail@example.com"><i class="fas fa-envelope"></i></a></li>
+                    <li><a href="https://github.com/demo123"><i class="fab fa-github"></i></a></li>
+                    <li><a href="https://linkedin.com/in/yourname"><i class="fab fa-linkedin"></i></a></li>
+                    <!-- Add more social media icons and links as needed -->
+                </ul>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2023 My Portfolio. All rights reserved.</p>
+        </div>
+    </footer>
+    
+    <script src="script.js"></script> <!-- Link to your JavaScript file if needed -->
+</body>
+</html>
